# mcy_media_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  IDEAS.md  README.md  config.py  docker-compose.yaml  main.py  media.py  pyproject.toml  requirements.txt  utils.py
