[project]
name = "mcy-media-bot"
version = "1.0.0"
description = "Telegram-бот, накладывающий логотип MCY на фото и видео."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyTelegramBotAPI==4.34.0",
    "pydantic-settings==2.14.1",
    "Pillow==12.2.0",
    "ffmpeg-python==0.2.0",
    "pillow-heif==1.4.0",
    "PySocks==1.7.1",
]

[project.scripts]
mcy-media-bot = "main:main"

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "config.py", "media.py", "logo.png"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["config", "media"]
